--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "test": "vitest"
   },
   "dependencies": {
@@ -15,10 +16,9 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/react": "^16.3.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -26,7 +26,9 @@
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "eslint-config-prettier": "^10.1.5",
     "jsdom": "^26.1.0",
+    "prettier": "^3.6.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
